Sept 10, 2024 : 0.30 released!
  - new : camera viewer can now look back at recordings
  - new : viewer can download snippets
  - new : recording are stored in a new jfav media file in one minute segments

Aug 6, 2024 : 0.25 released!
  - fix : increase heart beat to every 25 seconds
    found some cameras that disconnect after 30 seconds

Jun 5, 2024 : 0.24 released!
  - fix : remove camera from groups when deleted

Apr 10, 2024 : 0.23 released!
  - secure ui interface

Feb 27, 2024 : 0.22 released!
  - fix RTP thread leak
  - fix end of recording

Feb 26, 2024 : 0.21 released!
  - finally fixed stability issues (v0.13-v0.20 were unstable)
    the problem was my old nemesis the garbage collector
    switching to the ZGC has seemed to fix the issue
  - many minor fixes

Feb 23, 2024 : 0.20 released!
  - major threading restructured
  - improved H265 slices combining

Feb 22, 2024 : 0.19 released!
  - fixed group listing
  - rtsp fixes

Feb 22, 2024 : 0.18 released!
  - support more cameras

Feb 21, 2024 : 0.17 released!
  - fix supporting more cameras
  - fix more leaks

Feb 20, 2024 : 0.16 released!
  - fix many memory leaks

Feb 18, 2024 : 0.15 released!
  - finally fixed stability issues

Feb 17, 2024 : 0.14 released!
  - fix config issues
  - fix service shutdown
  - fix viewer/decoder

Feb 2, 2024 : 0.13 released!
  - new : added high/low res streams
  - new : added viewer
  - new : added H.265 codec

Nov 25, 2020 : 0.12 released!
  - new : launcher now selects best GC
    - adds support for Windows < 1803

Sept 28, 2020 : 0.11 released!
  - new : PLC tag : modbus now supports IR and HR tags

Aug 26, 2020 : 0.10 released!
  - fix : use proper endianness of PLC tags

July 8, 2020 : 0.9 released!
  - new : added picture snapshots triggered by PLC tag
  - new : config file format has changed (upgrade is automatic)

Mar 20, 2020 : 0.8 released!
  - fix : buffer overflow issues

Mar 18, 2020 : 0.7 released!
  - fix : win64 loader now loads msvcrt dlls properly
