@@ -16,7 +16,7 @@ Includes motion detection recording.
 Does NOT re-encode video if recording but just saves live stream into mp4 files.
 
 Requirements:
-  Viewer : 6GB memory
+  Viewer : 12GB memory
   Server : 16GB memory
 
 Known issues:
